<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>festival_gym</name>
    <version>0.0.0</version>
    <description>festival_gym</description>
    <maintainer email="Choi@naver.com">Choi</maintainer>
    <license>Apache-2.0</license>

    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
