<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>festival_ur_bringup</name>
  <version>0.0.0</version>
  <description>festival ur bringup for ROS 2</description>
  <maintainer email="kimjh9813@naver.com">Jeonghan</maintainer>
  <license>GPL-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>festival_ur_description</exec_depend>
  <depend>yolov8_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
